# electerm-sync-server-cpp

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: linux.yml
scripts/: build  init  run  test
src/: dotenv.hpp  file_store.hpp  jwt.hpp  main.cpp
test/: CMakeLists.txt  test_file_store.cpp  tests.cpp
